refactor: Java 25の新機能（Record, Sequenced Collections等）を使用してリファクタリング